# ride-flow

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src/components/3d/: HeroScene.tsx  utils.ts
src/components/layout/: PageWrapper.tsx
src/components/ui/: BikeCard.tsx  Button.tsx  FloatingInput.tsx
src/cpp/: BookingEngine.cpp  BookingEngine.h  CMakeLists.txt  bindings.cpp
src/hooks/: useWasm.ts
src/pages/: BookingPage.tsx  Confirmation.tsx  GarageSelection.tsx  HeroLanding.tsx  HistoryPage.tsx  LocationMapping.tsx  RiderConfig.tsx  RiderIdentity.tsx
src/pages/booking/: BikeSelectStep.tsx  ConfirmStep.tsx  EVTransitionAnimation.tsx  LocationStep.tsx  RiderDetailsStep.tsx
src/store/: useBookingStore.ts  useStore.ts
